# cli-games

./: .pre-commit-config.yaml  app.py  pyproject.toml
cli_games/: __init__.py
cli_games/api/: main.py
cli_games/core/: hangman.py  number_guesser.py  tic_tac_toe.py
cli_games/data/: hangman.txt
cli_games/utils/: file_manager.py  life_support.py
tests/core/: test_tic_tac_toe.py
