[tool.pylint.MASTER]
# Specify a score threshold to be exceeded before program exits with error.
fail-under = '9.45'
#ignore-patterns = 'main.py'

[tool.pylint.FORMAT]
max-line-length = 80

[tool.pylint.messages_control]
disable = ["missing-module-docstring", "duplicate-code"]

[tool.pylint.basic]
good-names = 'ax,n,p,x,rv,y,x0,f0,a,b,fx'

[tool.pylint.TYPECHECK]
generated-members = "numpy.*, torch.*"

[tool.flake8]
max-line-length = 80
exclude = [".git", "__pycache__", "dist"]
max-complexity = 10

[tool.black]
line-length = 80

[tool.isort]
atomic = true
profile = "black"
line_length = 80
skip_gitignore = true

[tool.poetry]
name = "cli-games"
version = "0.1.0"
description = "Classic and simple games that can be played via CLI"
authors = ["dg-codes <dgcodes@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
black = "^24.1.1"
pre-commit = "^3.6.0"
isort = "^5.13.2"
pylint = "^3.0.3"
flake8 = "^7.0.0"
pytest = "^8.0.0"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
